--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,3 +1,44 @@
 .about-container{
-    max-width: 100%
+    max-width: 100%;
+    margin-bottom: var(--marginBot);
+}
+
+.about{
+    display: flex;
+    gap: var(--gap);
+    place-content: center;
+}
+
+.about-text{
+    font-size: 1.2rem;
+    line-height: 2;
+    width: 500px;
+}
+
+.about-tools{
+    display: flex;
+    align-items: center;
+}
+
+.tool{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb( 255 255 255 / 0.7);
+    margin: 0 0.5rem 2rem 0.5rem;
+    padding: 1rem;
+    width: 8rem;
+    height: 8rem;
+    gap: 0.5rem;
+    color: black;
+    font-weight: bold;
+    font-size: 0.8rem;
+    border-radius: 50%;
+}
+
+.tool img{
+    width: 4rem;
+    height: 4rem;
 }
