--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,4 @@
-.home-container{
+.home-container {
     display: flex;
     place-content: center;
     min-height: 100vh;
@@ -6,10 +6,119 @@
     text-align: center;
 }
 
-.home-wrapper{
+.home-wrapper {
+    display: flex;
+    width: 100%;
+    place-content: center;
+    gap: var(--gap);
     margin-top: 40vh;
 }
 
-.home-wrapper h1{
+.home-wrapper h1 {
     font-size: 5rem;
 }
+
+.home-wrapper div{
+    width: 400px;
+    height: 400px;
+}
+
+.home-img {
+    position: relative;
+    background-image: url('../imgs/moon.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    transform: translateY(-30%);
+}
+
+.home-img-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    animation: revolve 15s linear infinite;
+    user-select: none;
+}
+
+.home-img-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 35px;
+    rotate: 45deg;
+}
+
+@keyframes revolve {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.home-container span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    opacity: 0;
+    background-color: white;
+    box-shadow: 0 0 10px white;
+    border-radius: 50%;
+    transform: rotate(-135deg);
+    animation: shootingStar 3s linear infinite;
+}
+
+.home-container span::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    width: 300px;
+    height: 1px;
+    background: linear-gradient(90deg, white, transparent);
+}
+
+@keyframes shootingStar {
+    0%{
+        transform: rotate(-135deg) translateX(0);
+        opacity: 0;
+    }
+    25%{
+        opacity: 1;
+    }
+    100%{
+        transform: rotate(-135deg) translateX(-2000px);
+        opacity: 0;
+    }
+}
+
+.home-container span:nth-child(1){
+    top:50%;
+    left: 0;
+    animation-delay: 0s;
+    animation-duration: 2s;
+}
+
+.home-container span:nth-child(2){
+    left: 20%;
+    animation-delay: 2s;
+    animation-duration: 3s;
+}
+
+.home-container span:nth-child(3){
+    top:50%;
+    left: 40%;
+    animation-delay: 3s;
+    animation-duration: 1.5s;
+}
+
+.home-container span:nth-child(4){
+    left: 60%;
+    animation-delay: 5s;
+    animation-duration: 2.7s;
+}
+
+.home-container span:nth-child(5){
+    left: 80%;
+    animation-delay: 7s;
+    animation-duration: 2.3s;
+}
+
