--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,6 +14,10 @@
     padding: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background-color: #212121;
     background-image: linear-gradient(rgb(0 0 0 /0.5), rgb(0 0 0 /0.5)), url('../imgs/night.png');
@@ -38,4 +42,9 @@ ul, ol{
     margin: 0 auto 2rem auto;
     color: rgb(2555 255 255 / 0.9);
     border-bottom: 1rem solid #0092cc;
+}
+
+a{
+    color: white;
+    text-decoration: none;
 }
