--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,5 +1,9 @@
 .about-container{
     max-width: 100%;
+    padding-top: calc(var(--navheight) + 2px);
+}
+
+.about-wrapper{
     margin-bottom: var(--marginBot);
 }
 
