--- a/public/css/project.css
+++ b/public/css/project.css
@@ -1,11 +1,16 @@
-.project-list{
+#projects {
+    padding-top: calc(var(--navheight) + 2px);
+
+}
+
+.project-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: var(--marginBot);
 }
 
-.project{
+.project {
     max-width: 50rem;
     overflow: hidden;
     border: 1px solid white;
@@ -14,23 +19,23 @@
     border-radius: 5px;
 }
 
-.project img{
+.project img {
     width: 100%;
     margin-bottom: 1rem;
     border-radius: 5px;
 }
 
-.project-info{
+.project-info {
     border-top: 1px solid white;
     padding: 1rem 0;
     line-height: 1.5;
 }
 
-.project-info .button-container{
+.project-info .button-container {
     display: flex;
 }
 
-.project-info button{
+.project-info button {
     display: flex;
     place-items: center;
     background-color: transparent;
@@ -39,10 +44,10 @@
     padding: 0.5rem 1rem;
     border-radius: 5px;
     font-size: 1.5rem;
-    margin: 1rem 1rem 0 0 ;
+    margin: 1rem 1rem 0 0;
 }
 
-.project-info button svg{
+.project-info button svg {
     width: 1.5rem;
     height: 1.5rem;
     margin-right: 0.5rem;
