--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,9 +1,11 @@
 .home-container {
     display: flex;
+    position: relative;
     place-content: center;
     min-height: 100vh;
     text-shadow: 0px 0px 5px whitesmoke;
     text-align: center;
+    overflow: hidden;
 }
 
 .home-wrapper {
@@ -85,7 +87,7 @@
         opacity: 1;
     }
     100%{
-        transform: rotate(-135deg) translateX(-2000px);
+        transform: rotate(-135deg) translateX(-80vw);
         opacity: 0;
     }
 }
