--- a/public/css/project.css
+++ b/public/css/project.css
@@ -45,10 +45,37 @@
     border-radius: 5px;
     font-size: 1.5rem;
     margin: 1rem 1rem 0 0;
+    cursor: pointer;
+    position: relative;
 }
 
 .project-info button svg {
     width: 1.5rem;
     height: 1.5rem;
     margin-right: 0.5rem;
+}
+
+.project-info button::before,
+.project-info button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    background-color: rgb(0 146 204 / 0.8);
+    width: 100%;
+    height: 0;
+    z-index: -1;
+    transition: height 0.1s linear;
+}
+
+.project-info button::before {
+    top: 0
+}
+
+.project-info button::after {
+    bottom: 0;
+}
+
+.project-info button:hover::before,
+.project-info button:hover::after {
+    height: 50%;
 }
