--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -2,7 +2,7 @@
     display: none;
     position: fixed;
     top: 0;
-    background-color: black;
+    background-color: rgb(0 0 0 /0.8);
     height: 100vh;
     width: 100vw;
     z-index: 1000;
@@ -22,7 +22,6 @@
     margin: auto;
     border: 0;
     outline: 0;
-    background-color: black;
     user-select: none;
 }
 
@@ -60,6 +59,7 @@
     position: relative;
     width: 1000px;
     background-color: #212121;
+    border: 5px solid #0092cc;
 }
 
 .modal-img-container img{
@@ -89,4 +89,11 @@
 
 .modal-desc{
     padding-top: 1rem;
+}
+
+@media screen and (max-width: 75em){
+    .modal,
+    .modal-img-container{
+        width: 90vw;
+    }
 }
