--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,11 +21,8 @@ html {
 body {
     background-color: #212121;
     background-image: linear-gradient(rgb(0 0 0 /0.5), rgb(0 0 0 /0.5)), url('../imgs/night.png');
-    background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
     /* background-blend-mode: multiply; */
-    background-attachment: fixed;
     color: white;
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
@@ -68,12 +65,49 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: #414141;
 }
 
+.button {
+    display: flex;
+    place-items: center;
+    background-color: transparent;
+    color: white;
+    border: 1px solid #0092cc;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+}
+
+.button::before,
+.button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    background-color: rgb(0 146 204 / 0.8);
+    width: 100%;
+    height: 0;
+    z-index: -1;
+    transition: height 0.1s linear;
+}
+
+.button::before {
+    top: 0
+}
+
+.button::after {
+    bottom: 0;
+}
+
+.button:hover::before,
+.button:hover::after {
+    height: 50%;
+}
+
 @media screen and (max-width: 75em) {
     :root {
         --gap: 1rem
     }
 
-    .title{
+    .title {
         font-size: 2rem;
         border-bottom: 5px solid #0092cc;
     }
