nav underline color change

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -34,7 +34,7 @@
     bottom: -10px;
     left: 0;
     height: 2px;
-    background-color: white;
+    background-color: #0092cc;
     transition: transform 0.2s linear;
 }
 
