--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     place-items: center;
     padding: 10rem 0;
+    margin-top: var(--marginBot);
     margin-bottom: var(--marginBot);
 }
 
